--- a/meson.build
+++ b/meson.build
@@ -33,13 +33,13 @@ py3.install_sources(['lib/apytypes/__init__.py'], subdir: 'apytypes')
 py3.extension_module(
     '_apytypes',
     sources : files([
-        'src/apy_common.cc',
-        'src/apy_fixed.cc',
-        'src/apy_fixed_wrapper.cc',
-        'src/apy_float.cc',
-        'src/apy_float_context_wrapper.cc',
-        'src/apy_float_contextmanager.cc',
-        'src/apy_float_wrapper.cc',
+        'src/apytypes_common.cc',
+        'src/apyfixed.cc',
+        'src/apyfixed_wrapper.cc',
+        'src/apyfloat.cc',
+        'src/apyfloat_context_wrapper.cc',
+        'src/apyfloat_contextmanager.cc',
+        'src/apyfloat_wrapper.cc',
         'src/apytypes_wrapper.cc',
     ]),
     include_directories : pybind11_includes,
