--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -23,10 +23,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        apt-get install --yes lcov
+        sudo apt-get install --yes lcov
         python -m pip install gcovr pytest-cov
     - name: Install APyTypes
       run: |
+        export CPPFLAGS='--coverage -fprofile-abs-path'
         python -m pip install .[test]
     - name: Test with pytest
       run: |
