--- a/.github/workflows/run_coverage.yml
+++ b/.github/workflows/run_coverage.yml
@@ -41,7 +41,7 @@ jobs:
         #  --extract coverage.info $PWD/src/'*' $PWD/lib/'*'
         # lcov --rc lcov_branch_coverage=1 --list coverage.info
         # find . -name '*.gc*' -delete
-        gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o coverage.xml --gcov-ignore-errors=no_working_dir_found
+        gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o cobertura.xml --root $PWD
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
