--- a/.github/workflows/run_coverage.yml
+++ b/.github/workflows/run_coverage.yml
@@ -35,13 +35,13 @@ jobs:
         pytest --cov-report=xml --cov=lib --log-level=DEBUG --color=yes
     - name: Format coverage data
       run: |
-        # lcov --rc lcov_branch_coverage=1 --capture --directory . \
-        #  --output-file coverage.info
-        # lcov --rc lcov_branch_coverage=1 --output-file coverage.info \
-        #  --extract coverage.info $PWD/src/'*' $PWD/lib/'*'
-        # lcov --rc lcov_branch_coverage=1 --list coverage.info
-        # find . -name '*.gc*' -delete
-        gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o cobertura.xml --root $PWD
+        lcov --rc lcov_branch_coverage=1 --capture --directory . \
+          --output-file coverage.info
+        lcov --rc lcov_branch_coverage=1 --output-file coverage.info \
+          --extract coverage.info $PWD/src/'*' $PWD/lib/'*'
+        lcov --rc lcov_branch_coverage=1 --list coverage.info
+         find . -name '*.gc*' -delete
+        # gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o cobertura.xml --root $PWD
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
