bug-fix: misc changes for MacOS Sonoma compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,21 @@ builddir/
 *.so
 *~
 
+# Apple debuging symbol files
+*.dSYM
+
 # Documentation ignores
 docs/_build/
 docs/xml/
+
+# C++ source ignores
+src/*.o
+src/test/*.o
+src/test/test_apyfixed
+src/test/test_apytypes_util
+src/callgrind.out.*
+src/.clangd
+src/coverage/
+src/coverage.info
+src/*.gcda
+src/*.gcno
