--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-        os: ["macos-latest", "ubuntu-latest"]
+        os: ["macos-latest", "ubuntu-latest", "windows-latest"]
 
     runs-on: ${{ matrix.os }}
 
@@ -30,6 +30,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8
+        if [[ "${{ runner.os }}" == 'Windows' ]]; then
+          git clone https://github.com/Microsoft/vcpkg.git
+          cd vcpkg
+          ./bootstrap-vcpkg.sh
+          ./vcpkg integrate install
+          vcpkg install pybind11
+        fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -41,4 +48,4 @@ jobs:
         python -m pip install .[test] -v
     - name: Test with pytest
       run: |
-        pytest
+        pytest --color=yes lib/test
