--- a/meson.build
+++ b/meson.build
@@ -38,6 +38,7 @@ py3.extension_module(
         'src/apyfloat_contextmanager.cc',
         'src/apyfloat_wrapper.cc',
         'src/apytypes_wrapper.cc',
+        'src/mini-gmp/mini-gmp.cc'
     ]),
     include_directories : pybind11_includes,
     dependencies : [py3_dep, gmp_dep, pybind11_dep],
