src: add APyFixedArray.__mul__

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project(
-    'aPy-types',
+    'apytypes',
     'cpp', 'c',
     default_options : ['cpp_std=c++17', 'c_std=c17'],
     version : '0.0.1',
