--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,12 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-        os: ["macos-latest", "ubuntu-latest", "windows-latest"]
+        os: ["macos-12", "ubuntu-latest", "windows-latest", "macos-14"]
+        exclude:
+          - os: "macos-14"
+            python-version: "3.8"
+          - os: "macos-14"
+            python-version: "3.9"
 
     runs-on: ${{ matrix.os }}
 
