--- a/.github/workflows/run_coverage.yml
+++ b/.github/workflows/run_coverage.yml
@@ -27,7 +27,7 @@ jobs:
         python -m pip install pytest-cov gcovr ninja pybind11 meson-python
     - name: Install APyTypes
       run: |
-        export CPPFLAGS='--coverage -fprofile-abs-path'
+        export CPPFLAGS='-O0 --coverage -fprofile-abs-path'
         python -m pip install --no-deps --no-build-isolation -v --editable .
         unset CPPFLAGS
     - name: Test with pytest
