--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,34 +1,21 @@
-name: documentation
+name: Deploy Sphinx documentation to Pages
 
-on: [push, pull_request, workflow_dispatch]
-
-permissions:
-  contents: write
+on:
+  push:
+    branches: [main] # branch to trigger deployment
 
 jobs:
-  docs:
-    runs-on: ubuntu-latest
+  pages:
+    runs-on: ubuntu-20.04
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    permissions:
+      pages: write
+      id-token: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-           python-version: "3.10"
-      - name: Install dependencies
-        run: |
-          sudo apt-get install -yy doxygen
-      - name: Install APyTypes and doc dependencies
-        run: |
-          python -m pip install .[doc] -v
-      - name: Sphinx build
-        run: |
-          cd docs
-          make html
-          cd ..
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        with:
-          publish_branch: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/_build/html/
-          force_orphan: true
+    - name: Install dependencies
+      run: |
+        sudo apt-get install -yy doxygen
+    - id: deployment
+      uses: sphinx-notes/pages@v3
