--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,7 +19,7 @@ jobs:
         sudo apt-get install -yy doxygen
     - name: Install APyTypes and doc dependencies
       run: |
-        python -m pip install -v .[docs]
+        python -m pip install [.docs] -v
     - name: Run DoxyGen
       run:
          cd docs
