--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Sphinx build
         run: |
           cd docs
-          doxygen
+          make
           cd ..
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
