--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 #Issues = "https://github.com/pypa/sampleproject/issues"
 
 [tool.meson-python.args]
-setup = ['--default-library=static']
+install = ['--skip-subprojects']
 
 [project.optional-dependencies]
 docs = ["furo", "numpydoc", "sphinx", "sphinx_copybutton", "breathe", "sphinx_gallery", "matplotlib"]
