--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,11 +15,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: ["macos-12", "ubuntu-latest", "windows-latest", "macos-14"]
         exclude:
-          - os: "macos-14"
-            python-version: "3.8"
           - os: "macos-14"
             python-version: "3.9"
 
