src: new API for APyFixed

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,7 +4,7 @@
 # You can set these variables from the command line, and also
 # from the environment for the first two.
 SPHINXOPTS    ?= --keep-going
-SPHINXBUILD   ?= python -msphinx
+SPHINXBUILD   ?= python3 -msphinx
 SPHINXPROJ    = apytypes
 SOURCEDIR     = .
 BUILDDIR      = _build
@@ -21,7 +21,7 @@ clean:
 	rm -rf "$(SOURCEDIR)/examples"
 
 show:
-	@python -c "import webbrowser; webbrowser.open_new_tab('file://$(shell pwd)/_build/html/index.html')"
+	@python3 -c "import webbrowser; webbrowser.open_new_tab('file://$(shell pwd)/_build/html/index.html')"
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
