--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,5 +48,6 @@ markers = [
     "float_div : custom marker for grouping tests for floating-point division",
     "float_pow : custom marker for grouping tests for floating-point power function",
     "float_comp : custom marker for grouping tests for floating-point comparisons",
-    "float_special : custom marker for grouping tests for floating-point special values"
+    "float_special : custom marker for grouping tests for floating-point special values",
+    "float_array : custom marker for grouping tests for floating-point arrays"
 ]
