Implement iterator for APyFloatArray

--- a/meson.build
+++ b/meson.build
@@ -51,6 +51,7 @@ py3.extension_module(
         'src/apyfloat_contextmanager.cc',
         'src/apyfloat_wrapper.cc',
         'src/apyfloatarray.cc',
+        'src/apyfloatarray_iterator.cc',
         'src/apyfloatarray_wrapper.cc',
         'src/apytypes_wrapper.cc',
         'extern/mini-gmp/mini-gmp.c'
