src: add AccumulatorContext

--- a/meson.build
+++ b/meson.build
@@ -40,21 +40,20 @@ fmt_dep = fmt.get_variable('fmt_header_only_dep')
 py3.extension_module(
     '_apytypes',
     sources : files([
-        'src/apytypes_common.cc',
+        'extern/mini-gmp/mini-gmp.c',
         'src/apyfixed.cc',
         'src/apyfixed_wrapper.cc',
         'src/apyfixedarray.cc',
         'src/apyfixedarray_iterator.cc',
         'src/apyfixedarray_wrapper.cc',
         'src/apyfloat.cc',
-        'src/apyfloat_context_wrapper.cc',
-        'src/apyfloat_contextmanager.cc',
         'src/apyfloat_wrapper.cc',
         'src/apyfloatarray.cc',
         'src/apyfloatarray_iterator.cc',
         'src/apyfloatarray_wrapper.cc',
+        'src/apytypes_common.cc',
+        'src/apytypes_context_wrapper.cc',
         'src/apytypes_wrapper.cc',
-        'extern/mini-gmp/mini-gmp.c'
     ]),
     dependencies : [py3_dep, pybind11_dep, fmt_dep],
     subdir: 'apytypes',
