Enable CI benchmarks to see development over time

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ docs = [
 test = [
     "numpy",
     "pytest",
+    "pytest-benchmark"
 ]
 dev = ["pybind11-stubgen"]
 benchmark = ["fpbinary", "fixedpoint", "fxpmath", "spfpm", "numfi", "numpy", "matplotlib"]
