--- a/.github/workflows/run_coverage.yml
+++ b/.github/workflows/run_coverage.yml
@@ -32,7 +32,7 @@ jobs:
         unset CPPFLAGS
     - name: Test with pytest
       run: |
-        pytest --cov-report=xml --cov=lib --log-level=DEBUG --color=yes
+        pytest lib/test --cov-report=xml --cov=lib --log-level=DEBUG --color=yes
     - name: Format coverage data
       run: |
         lcov --rc lcov_branch_coverage=1 --capture --directory . \
