nanobind: remove nanobind dependency from pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 build-backend = 'mesonpy'
-requires = ['meson-python', 'nanobind']
+requires = ['meson-python']
 
 [project]
 name = "apytypes"
