--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           python-version: "3.12"
       - name: Install APyTypes (and dependencies)
-        run: python -m pip install -v .[test]
+        run: python -m pip install --upgrade pip && python -m pip install -v .[test]
       # Run benchmark with `go test -bench` and stores the output to a file
       - name: Run benchmark
         run: cd benchmark && pytest ci_fixed_array_benchmarks.py --benchmark-warmup=on --benchmark-warmup-iterations=1 --benchmark-json output_fixed_array.json
@@ -23,7 +23,6 @@ jobs:
         with:
           path: ./cache
           key: ${{ runner.os }}-benchmark
-        run: mkdir -p cache && cp benchmark/output_fixed_array.json
       # Run `github-action-benchmark` action
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
@@ -34,7 +33,7 @@ jobs:
           # Where the output from the benchmark tool is stored
           output-file-path: benchmark/output_fixed_array.json
           # Where the previous data file is stored
-          external-data-json-path: ./cache/output_fixed_array.json.json
+          external-data-json-path: ./cache/output_fixed_array.json
           # GitHub API token to make a commit comment
           github-token: ${{ secrets.GITHUB_TOKEN }}
           # Enable alert commit comment
