--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get install -yy doxygen
+          python -m pip install --upgrade pip
           python -m pip install -v .[docs,benchmark]
       - name: Run comparison benchmarks
         run: |
@@ -26,7 +27,7 @@ jobs:
           cp benchmark/benchmark.png docs/_static
       # Run benchmark with `go test -bench` and stores the output to a file
       - name: Run benchmark
-        run: mkdir cache && cd benchmark && pytest ci_fixed_array_benchmarks.py --benchmark-warmup=on --benchmark-warmup-iterations=1 --benchmark-json output_fixed_array.json && cp output_fixed_array.json ../cache/
+        run: cd benchmark && pytest ci_fixed_array_benchmarks.py --benchmark-warmup=on --benchmark-warmup-iterations=1 --benchmark-json output_fixed_array.json
       # Download previous benchmark result from cache (if exists)
       - name: Download previous benchmark data
         uses: actions/cache@v4
@@ -45,6 +46,7 @@ jobs:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build/html
+          keep_files: true
           force_orphan: true
       # Run `github-action-benchmark` action
       - name: Store benchmark result
@@ -60,3 +62,5 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           # Push and deploy GitHub pages branch automatically
           auto-push: true
+      - name: Copy previous file to cache
+        run: mkdir -p cache && cp benchmark/output_fixed_array.json cache/
